# aiforge

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: .ci.yml
data/: chunked_files.json  my_test_data.txt  test_enhanced_chunking.json  test_persistent.txt
docs/: executive_summary.md  project_plan.md
docs/insights/: _insight.template.md  config-import-duplication.md  custom_exception_class.md  pytest-cleanup.md
docs/instructions/: risk_kit.md
notebooks/: langchain-chunker.ipynb
notebooks/ChromaDB/: 01-chroma.ipynb  ChromaDB_getting_started.ipynb  requirements.txt
notebooks/Langchain/: langchain-chunker.ipynb
scripts/: run_changelog.py
src/aiforge/: config.py
src/aiforge/chromadb/: hello.py
src/aiforge/images/: enhance.py  load.py
src/aiforge/lab/: asana.py  async_scraper.py  unified.py  userdat.py
src/aiforge/lab/streamlit/: st_asana.py  st_unified.py
src/aiforge/lab/tests/: test_unified.py
src/aiforge/langchain/: langchain_service.py
src/aiforge/server/routers/: alert.py  response_generation.py
src/aiforge/utils/: file_utils.py  json_utils.py  web_scraper.py
src/aiforge/vectorstore/: chunking.py
src/cli/: logging_config.py  run_risk_kit.py
src/risk_kit/: README.md  calculator_factory.py  cli.py  cli_logging.py  config.py  logging_config.py  utils.py
src/risk_kit/calculators/: finance_assessor.py  finance_mortgage.py
src/risk_kit/tests/: test_calculator_factory.py  test_logging.py  test_risk_kit.py
test_data/: moby_dick.txt
tests/: test_async_scraper.py  test_chroma_hello.py  test_chroma_query.py  test_config.py  test_config_two.py  test_enhanced_chunking.py  test_file_utils.py  test_hello_world.py  test_image_enhance.py  test_json_utils.py  test_langchain_service.py  test_open_project_file.py  test_scrape.py  test_user_data.py  test_userdat.py  test_vectorstore.py  test_web_scraper.py  test_write_file.py
tests/lab/: test_asana.py  test_unified.py
tests/services/: test_chroma.py  test_scrape_wikipedia.py
tests/text_processing/: test_enhanced_chunking.py
tests/utils/: test_image_load.py  test_json_utils.py
tmp/: asana.json  file1.txt  file2.txt  great_gatsby_chunks.json  moby_dick_chunks.json  my_test_data_chunks.json  sherlock_holmes_chunks.json  streamlit_app.py  test_file_tuples.txt
tmp/chroma-populate/: chroma.sqlite3
tmp/data/test/: great_gatsby.txt
