[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiforge"
version = "0.1.0"
description = "A project for AI development"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "aiforge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "0.5.4"
langchain-google-genai = "1.0.4"
langchain = "^0.1.0"
langchain-openai = "^0.0.2" 
pytest-asyncio = "^0.23.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
hypothesis = "^6.108.3"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]