[tool.poetry]
name = "aiforge"
version = "0.1.0"
description = "A project for AI development"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "aiforge", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-generativeai = "0.5.4"
langchain = "0.2.12"
langchain-openai = "0.1.21"
langchain_community = "0.2.11"
langchain-google-genai = "1.0.4"
pytest-asyncio = "^0.23.8"
pypdf = "4.3.1"
pyyaml = "^6.0.2"
chromadb = "^0.5.5"
tiktoken = "^0.7.0"
langchain-chroma = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.23.8"
hypothesis = "^6.108.3"
types-pyyaml = "^6.0.12.20240808"
flake8-docstrings = "^1.7.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = {extras = ["jupyter"], version = "^24.3.0"}
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
mypy_path = "src"
python_version = "3.9"  # Updated to match the minimum supported version
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = [
    '^tests/'
]
